--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body  class="bg-gradient-to-r from-white to-blue-50">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <!-- <script type="module" src="/src/server.js"></script> -->
   </body>
 </html>
